--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -1,11 +1,12 @@
-<button class="hamburger-icon btn btn-dark"  (click)="toggleSidebar()">
-    ☰
-  </button>
+<button class="hamburger-icon btn btn-dark" (click)="toggleSidebar()">☰</button>
 
-  <!-- Sidebar -->
-  <div [class]="isSidebarCollapsed() ?'sidebar':'sidebar collapsed'"  id="sidebar">
-    <!-- Navigation Links -->
-    <ul class="nav flex-column p-2">
+<!-- Sidebar -->
+<div
+  [class]="isSidebarCollapsed() ? 'sidebar' : 'sidebar collapsed'"
+  id="sidebar"
+>
+  <!-- Navigation Links -->
+  <!--     <ul class="nav flex-column p-2">
       <li class="nav-item">
         <a class="nav-link" href="#">Dashboard</a>
       </li>
@@ -15,16 +16,26 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Settings</a>
       </li>
-    </ul>
+    </ul> -->
 
-    <!-- Footer Section -->
-    <div class="sidebar-footer">
-      <p class="mb-2">Hello, <span id="username">John Doe</span></p>
-      <button class="btn btn-danger btn-sm" id="logOffButton">Log Off</button>
-    </div>
-  </div>
+  <ul class="nav flex-column p-2 mt-10">
+    @for(item of menuItems;track $index){
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="item.routerLink">
+        <i [class]="item.icon"></i> {{ item.label }}</a
+      >
+    </li>
+    }
+  </ul>
 
-  <!-- Main Content -->
-  <div [class]="isSidebarCollapsed() ?'content':'content collapsed'">
-     <router-outlet></router-outlet>
+  <!-- Footer Section -->
+  <div class="sidebar-footer">
+    <p class="mb-2">Hello, <span id="username">John Doe</span></p>
+    <button class="btn btn-danger btn-sm" id="logOffButton">Log Off</button>
   </div>
+</div>
+
+<!-- Main Content -->
+<div [class]="isSidebarCollapsed() ? 'content' : 'content collapsed'">
+  <router-outlet></router-outlet>
+</div>
