--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,19 +6,42 @@
         <span class="icon">
           <i class="fa-solid fa-envelope"></i>
         </span>
-        <input type="emal" [(ngModel)]="loginObj.username" name="username" required>
+        <input
+          type="emal"
+          [(ngModel)]="loginObj.username"
+          name="username"
+          #username="ngModel"
+          required
+        />
         <label for="">Email</label>
+        @if(username.invalid && username.touched){
+        <div class="text-white">
+          {{ username.errors?.['required'] ? requiredMessage.Email : '' }}
+        </div>
+        }
       </div>
-      <div class="input-box">
-        <span class="icon">
-          <i class="fa-solid fa-lock"></i>
-        </span>
-        <input type="password"  [(ngModel)]="loginObj.password" name="password" required>
-        <label for="">password</label>
+      <div>
+        <div class="input-box">
+          <span class="icon">
+            <i class="fa-solid fa-lock"></i>
+          </span>
+          <input
+            type="password"
+            [(ngModel)]="loginObj.password"
+            name="password"
+            #password="ngModel"
+            required
+          />
+          <label for="">Password</label>
+        </div>
+        @if(password.invalid && password.touched){
+        <div class="text-white mt-1">
+          {{ username.errors?.['required'] ? requiredMessage.Password : '' }}
+        </div>
+        }
       </div>
-     
-      <button type="button" (click)="onLogin()">Login</button>
-     
+
+      <button type="button" (click)="onLogin($event)">Login</button>
     </form>
   </div>
 </div>
