--- a/src/app/pages/students/students.component.html
+++ b/src/app/pages/students/students.component.html
@@ -68,15 +68,15 @@
         ></button>
       </div>
       <div class="modal-body">
-        <form id="studentForm">
+        <form id="studentForm" [formGroup]="from">
           <div class="row">
             <div class="col-6">
               <div class="form-group">
                 <i class="fas fa-user"></i>
                 <input
                   type="text"
-                  class="form-control"
-                  id="name"
+                  class="form-control" 
+                  formControlName="name"
                   placeholder="Name"
                   required
                 />
@@ -88,6 +88,7 @@
                 <input
                   type="email"
                   class="form-control"
+                  formControlName="email"
                   id="email"
                   placeholder="Email"
                   required
@@ -102,6 +103,7 @@
                 <input
                   type="text"
                   class="form-control"
+                  formControlName="phone"
                   id="phone"
                   placeholder="Phone"
                   required
@@ -114,6 +116,7 @@
                 <input
                   type="text"
                   class="form-control"
+                  formControlName="address"
                   id="address"
                   placeholder="Address"
                   required
@@ -128,6 +131,7 @@
                 <input
                   type="text"
                   class="form-control"
+                  formControlName="city"
                   id="city"
                   placeholder="City"
                   required
@@ -140,6 +144,7 @@
                 <input
                   type="text"
                   class="form-control"
+                  formControlName="pinCode"
                   id="pinCode"
                   placeholder="Pin Code"
                   required
@@ -158,7 +163,7 @@
         >
           Close
         </button>
-        <button type="submit" class="btn btn-primary" form="studentForm">
+        <button type="submit" class="btn btn-primary"  (click)="onSave()">
           Save
         </button>
       </div>
