--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,4 @@
 <div class="d-flex flex-column flex-lg-row h-lg-full bg-surface-secondary">
-  <!-- header content -->
   <div class="h-screen flex-grow-1">
     <header class="bg-surface-primary border-bottom pt-6">
       <div class="container-fluid">
@@ -7,25 +6,6 @@
           <div class="row align-items-center">
             <div class="col-sm-6 col-12 mb-4 mb-sm-0">
               <h1 class="h2 mb-0 ls-tight">Institute Management</h1>
-            </div>
-            <div class="col-sm-6 col-12 text-sm-end">
-              <div class="mx-n1">
-                <a
-                  href="#"
-                  class="btn d-inline-flex btn-sm btn-neutral border-base mx-1"
-                >
-                  <span class="pe-2">
-                    <i class="bi bi-pencil"></i>
-                  </span>
-                  <span>Edit</span>
-                </a>
-                <a href="#" class="btn d-inline-flex btn-sm btn-primary mx-1">
-                  <span class="pe-2">
-                    <i class="bi bi-plus"></i>
-                  </span>
-                  <span>Create</span>
-                </a>
-              </div>
             </div>
           </div>
         </div>
@@ -37,34 +17,6 @@
         <div class="row g-6 mb-6">
           @for(card of cards; track $index){
           <div class="col-xl-3 col-sm-6 col-12">
-            <!--             <div class="card shadow border-0">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col">
-                    <span
-                      class="h6 font-semibold text-muted text-sm d-block mb-2"
-                      >{{ card.title }}</span
-                    >
-                    <span class="h3 font-bold mb-0">{{ card.value }}</span>
-                  </div>
-                  <div class="col-auto">
-                    <div [class]="card.iconClass">
-                      <i [class]="card.icon"></i>
-                    </div>
-                  </div>
-                </div>
-                <div class="mt-2 mb-0 text-sm">
-                  <span
-                    class="badge badge-pill bg-soft-success text-success me-2"
-                  >
-                    <i class="bi bi-arrow-up me-1"></i>13%
-                  </span>
-                  <span class="text-nowrap text-xs text-muted"
-                    >Since last month</span
-                  >
-                </div>
-              </div>
-            </div> -->
             <app-card
               [title]="card.title"
               [value]="card.value"
@@ -120,7 +72,7 @@
                       <th scope="col">Enroll Id</th>
                       <th scope="col">Student Name</th>
                       <th scope="col">Batch Name</th>
-                      <th scope="col">Enrollment Date</th>
+                      <th scope="col">Payment Date</th>
                       <th scope="col">Total Fees</th>
                     </tr>
                   </thead>
@@ -131,7 +83,7 @@
                       <td>{{ fee.name }}</td>
                       <td>{{ fee.batchId }}</td>
                       <td>
-                        {{ fee.enrollDate | date : "MMM d, y, h:mm a" }}
+                        {{ fee.paymentDate | date : "MMM d, y, h:mm a" }}
                       </td>
                       <td>{{ fee.totalFees }}</td>
                     </tr>
