--- a/src/app/reusable/component/modal/modal.component.html
+++ b/src/app/reusable/component/modal/modal.component.html
@@ -4,7 +4,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">
-          {{ isEditMode ? "Edit Student" : "Add Student" }}
+          {{ title }}
         </h5>
         <button
           type="button"
