--- a/src/app/pages/batch/batch-list/batch-list.component.html
+++ b/src/app/pages/batch/batch-list/batch-list.component.html
@@ -114,17 +114,8 @@
             </div>
             <div class="col-sm-6 col-12 text-sm-end">
               <div class="mx-n1">
-                <input
-                  class="me-2"
-                  type="search"
-                  placeholder="Search"
-                  aria-label="Search"
-                />
-                <button
-                  type="button"
-                  class="btn btn-primary"
-                  (click)="openModal()"
-                >
+                <input class="me-2" type="search" placeholder="Search" aria-label="Search" />
+                <button type="button" class="btn btn-primary" (click)="openModal()">
                   Add Batch
                 </button>
               </div>
@@ -140,30 +131,34 @@
           <div class="col-12">
             <div class="card shadow border-0 mb-7">
               <div class="table-responsive">
-                <table class="table table-hover table-nowrap">
-                  <thead class="thead-light">
-                    <tr>
-                      <th scope="col">Batch Name</th>
-                      <th scope="col">Batch Start Date</th>
-                      <th scope="col">Batch End Date</th>
-                      <th scope="col">Teacher</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    @for(batch of totalBatches; track $index){
-                    <tr>
-                      <td>{{ batch.batchName }}</td>
+                <ng-template #dataTable>
+                  <table class="table table-hover table-nowrap">
+                    <thead class="thead-light">
+                      <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">Batch Name</th>
+                        <th scope="col">Batch Start Date</th>
+                        <th scope="col">Batch End Date</th>
+                        <th scope="col">Teacher</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      @for(batch of totalBatches; track $index){
+                      <tr>
+                        <td>{{ $index+1}}</td>
+                        <td>{{ batch.batchName }}</td>
 
-                      <td>
-                        {{ batch.startDate | date : "MMM d, y, h:mm a" }}
-                      </td>
+                        <td>
+                          {{ batch.startDate | date : "MMM d, y, h:mm a" }}
+                        </td>
 
-                      <td>{{ batch.endDate | date : "MMM d, y, h:mm a" }}</td>
-                      <td>{{ batch.teacher }}</td>
-                    </tr>
-                    }
-                  </tbody>
-                </table>
+                        <td>{{ batch.endDate | date : "MMM d, y, h:mm a" }}</td>
+                        <td>{{ batch.teacher }}</td>
+                      </tr>
+                      }
+                    </tbody>
+                  </table>
+                </ng-template>
               </div>
             </div>
           </div>
@@ -173,65 +168,77 @@
   </div>
 </div>
 
+<!-- Loading data -->
+<ng-container *ngIf="isLoadingData; else dataTable">
+  <div class="d-flex flex-column justify-content-center align-items-center my-3">
+    <div class="spinner-border text-primary" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+    <p class="mt-3" style="color: gray;">Loading batches, please wait...</p>
+  </div>
+</ng-container>
+
+
 <div class="modal" id="studentModal" #studentModal>
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">New Batch</h5>
-        <button
-          type="button"
-          class="btn-close"
-          (click)="closeModal()"
-          aria-label="Close"
-        ></button>
+        <button type="button" class="btn-close" (click)="closeModal()" aria-label="Close"></button>
       </div>
+
       <div class="modal-body">
-        <form id="batchForm">
+        <form id="batchForm" [formGroup]="batchForm" (ngSubmit)="saveBatch()">
           <div class="row">
-            <div class="col-md-6">
-              <div class="form-group">
-                <i class="fas fa-layer-group"></i>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="batchName"
-                  placeholder="Batch Name"
-                  required
-                />
-              </div>
+
+            <div class="col-md-6 mb-3">
+              <label for="batchName" class="form-label">Batch Name</label>
+              <i class="fas fa-layer-group"></i>
+              <input type="text" class="form-control" id="batchName" placeholder="Batch Name"
+                formControlName="batchName" required />
+              <small class="text-danger"
+                *ngIf="batchForm.get('batchName')?.invalid && batchForm.get('batchName')?.touched">
+                Batch Name is required.
+              </small>
             </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <i class="fas fa-chalkboard-teacher"></i>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="teacher"
-                  placeholder="Teacher Name"
-                  required
-                />
-              </div>
+
+            <div class="col-md-6 mb-3">
+              <label for="teacher" class="form-label">Teacher Name</label>
+              <i class="fas fa-chalkboard-teacher"></i>
+              <input type="text" class="form-control" id="teacher" placeholder="Teacher Name" formControlName="teacher"
+                required />
+              <small class="text-danger" *ngIf="batchForm.get('teacher')?.invalid && batchForm.get('teacher')?.touched">
+                Teacher Name is required.
+              </small>
             </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <i class="fas fa-calendar-alt"></i>
-                <input
-                  type="date"
-                  class="form-control"
-                  id="startDate"
-                  required
-                />
-              </div>
+
+            <div class="col-md-6 mb-3">
+              <label for="startDate" class="form-label">Start Date</label>
+              <i class="fas fa-calendar-alt"></i>
+              <input type="date" class="form-control" id="startDate" formControlName="startDate" required />
+              <small class="text-danger"
+                *ngIf="batchForm.get('startDate')?.invalid && batchForm.get('startDate')?.touched">
+                Start Date is required.
+              </small>
             </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <i class="fas fa-calendar-check"></i>
-                <input type="date" class="form-control" id="endDate" required />
-              </div>
+
+            <div class="col-md-6 mb-3">
+              <label for="endDate" class="form-label">End Date</label>
+              <i class="fas fa-calendar-check"></i>
+              <input type="date" class="form-control" id="endDate" formControlName="endDate" required />
+              <small class="text-danger" *ngIf="batchForm.get('endDate')?.invalid && batchForm.get('endDate')?.touched">
+                End Date is required.
+              </small>
             </div>
+
             <div class="col-12 text-end">
-              <button type="submit" class="btn btn-primary">Save Batch</button>
+              <button type="submit" class="btn btn-primary" [disabled]="batchForm.invalid || isLoading">
+                <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status"
+                  aria-hidden="true"></span>
+                {{ isLoading ? 'Saving...' : 'Save Batch' }}
+              </button>
             </div>
+
           </div>
         </form>
       </div>
