--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -14,6 +14,10 @@
     <!-- Main body content-->
     <main class="py-6 bg-surface-secondary">
       <div class="container-fluid">
+        @if(isDataLoading) {
+        <span class="sr-only me-6">Loading Student data...</span>
+        <div class="spinner-border" role="status"></div>
+        }@else{
         <div class="row g-6 mb-6">
           @for(card of cards; track $index){
           <div class="col-xl-3 col-sm-6 col-12">
@@ -94,6 +98,7 @@
             </div>
           </div>
         </div>
+        }
       </div>
     </main>
   </div>
