--- a/src/app/pages/enrollments/enrollments.component.scss
+++ b/src/app/pages/enrollments/enrollments.component.scss
@@ -1,3 +1,9 @@
 @import url(https://unpkg.com/@webpixels/css@1.1.5/dist/index.css);
 
 @import url("https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css");
+.batch-card, .enrollment-form, .enrollments-table {
+    background-color: #fff;
+    border-radius: 15px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-bottom: 2rem;
+}
